--- a/index.html
+++ b/index.html
@@ -10,17 +10,7 @@
     <div id="root">
         <!-- render method will replace this completely -->
         <h1>Nikhil is here</h1>
-        <h1>Nikhil is here</h1>
-        <h1>Nikhil is here</h1>
     </div>
-    <script 
-        crossorigin
-        src="https://unpkg.com/react@18/umd/react.development.js">
-    </script>
-    <script 
-        crossorigin
-        src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
-    </script>
-    <script src="./App.js"></script>
+    <script type="module" src="./App.js"></script>
 </body>
 </html>
