Initial Commit Food App

--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namaste React</title>
+    <title>Namaste Food</title>
     <link rel="stylesheet" href="./index.css"/>
 </head>
 <body>
     <div id="root">
-        <!-- render method will replace this completely -->
-        <h1>Nikhil is here</h1>
     </div>
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 </body>
 </html>
